Fix PopLayout issue with forwardRef
Add items to one slide

Better image rendering

--- a/src/slides/Third/styles.module.scss
+++ b/src/slides/Third/styles.module.scss
@@ -67,5 +67,24 @@
 				clip-path: polygon(4em 0, 100% 0, 100% calc(100% - 4em), calc(100% - 4em) 100%, 0 100%, 0 4em, 4em 0);
 			}
 		}
+
+		.items {
+			display: flex;
+			gap: 2em;
+			justify-content: space-between;
+			margin-top: 2em;
+
+			.item {
+				width: 10em;
+				height: 10em;
+
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+					border: 3px solid #fcfffd;
+				}
+			}
+		}
 	}
 }
